# connectedhomeip

examples/chip-tool/include/: CHIPProjectAppConfig.h
examples/lock-app/linux/: BUILD.gn  fuzzing-main.cpp
integrations/libfuzzer/: build_fuzz_clusters_coverage.sh  build_fuzz_coverage.sh  build_fuzz_lock_coverage.sh  build_fuzz_run.sh
src/lib/core/: CHIPConfig.h
src/platform/OpenThread/: OpenThreadUtils.cpp
src/transport/: SecureMessageCodec.cpp
