# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")
import("${build_root}/config/compiler/compiler.gni")

import("${chip_root}/src/lib/lib.gni")
import("${chip_root}/src/platform/device.gni")

# executable("chip-lock-app") {
#   sources = [
#     "main.cpp",
#     "src/LockAppCommandDelegate.cpp",
#   ]

#   deps = [
#     "${chip_root}/examples/lock-app/lock-common",
#     "${chip_root}/examples/lock-app/lock-common:lock-cluster-service",
#     "${chip_root}/examples/platform/linux:app-main",
#     "${chip_root}/src/lib",
#     "${chip_root}/third_party/jsoncpp",
#   ]

#   include_dirs = [ "include" ]

#   cflags = [ "-Wconversion" ]

#   output_dir = root_out_dir
# }



source_set("chip-lock-app-common") {
  sources = [
    "${chip_root}/examples/lock-app/lock-common/include/LockEndpoint.h",
    "${chip_root}/examples/lock-app/lock-common/include/LockManager.h",
    "${chip_root}/examples/lock-app/lock-common/src/LockEndpoint.cpp",
    "${chip_root}/examples/lock-app/lock-common/src/LockManager.cpp",
    "${chip_root}/examples/lock-app/lock-common/src/ZCLDoorLockCallbacks.cpp",
  ]

  deps = [ "${chip_root}/examples/all-clusters-app/all-clusters-common" ]

  include_dirs = [ "${chip_root}/examples/lock-app/lock-common/include" ]

  cflags = [ "-Wconversion" ]
}




if (is_libfuzzer) {
  executable("chip-lock-app-fuzzing") {
    sources = [ "fuzzing-main.cpp" ]

    deps = [
        "${chip_root}/examples/lock-app/lock-common",
        "${chip_root}/examples/lock-app/lock-common:lock-cluster-service",
        "${chip_root}/examples/platform/linux:app-main",
        "${chip_root}/src/lib",
        "${chip_root}/third_party/jsoncpp",
      ]

    cflags = [ "-Wconversion" ]

    output_dir = root_out_dir
  }
} else {
    executable("chip-lock-app") {
    sources = [
    "main.cpp",
    "src/LockAppCommandDelegate.cpp",
    ]

    deps = [
    "${chip_root}/examples/lock-app/lock-common",
    "${chip_root}/examples/lock-app/lock-common:lock-cluster-service",
    "${chip_root}/examples/platform/linux:app-main",
    "${chip_root}/src/lib",
    "${chip_root}/third_party/jsoncpp",
    ]

    include_dirs = [ "include" ]

    cflags = [ "-Wconversion" ]

    output_dir = root_out_dir
    }
}


















group("linux") {
  deps = []
  if (is_libfuzzer) {
    deps += [ ":chip-lock-app-fuzzing" ]
  } else {
    deps += [ ":chip-lock-app" ]
  }
}

group("default") {
  deps = [ ":linux" ]
}
